test/corpus/L1/positive/array-empty-byte.st
"---
kind: positive
section: array.empty-byte
note: empty byte array
---"
#[]
