test/corpus/L1/negative/unclosed-bytearray.st
"---
kind: negative
section: error.unclosed-bytearray
codes: E_UNCLOSED_BYTEARRAY
note: byte array literal missing closing bracket
---"
#[1 2
